--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <a href="../index.html">Главная</a>
-    <a href="./catalog/catalog.html">Каталог</a>
+    <a href="../catalog/catalog.html">Каталог</a>
     <a href="../index.html">Контакты</a>
     <h1>Каталог</h1>
     <p>
@@ -28,30 +28,40 @@
       magni quam culpa voluptate cupiditate minus, labore optio doloribus!
       Alias, quo.
     </p>
-    <h3>Манговый коктейль</h3>
-    <p>Свежевыжатый сок манго</p>
-    <img
-      src="../img/mango-shake-fresh-tropical-fruit-smoothies.jpg"
-      title="Манговй коктейль"
-      alt="Свежевыжатый сок манго"
-      width="300"
-      height="300"
-    />
-    <h3>Молочный коктейль с голубикой</h3>
-    <p>Вкусный :-)</p>
-    <img
-      src="../img/organic-milk-beverage-with-blueberries.jpg"
-      title="Молочный коктейль с голубикой"
-      width="300"
-      height="300"
-    />
-    <h3>Круассанчики</h3>
-    <p>Круассанчики со сгущеночкой</p>
-    <img
-      src="../img/top-view-vegan-baked-products-arrangement.jpg"
-      title=">Круосанчики"
-      width="300"
-      height="300"
-    />
+    <figure>
+      <img
+        src="../img/mango-shake-fresh-tropical-fruit-smoothies.jpg"
+        title="Манговй коктейль"
+        alt="Манговй коктейль"
+        width="300"
+        height="300"
+      />
+      <h3>Манговый коктейль</h3>
+      <p>Описание: Свежевыжатый сок манго</p>
+    </figure>
+
+    <figure>
+      <img
+        src="../img/organic-milk-beverage-with-blueberries.jpg"
+        title="Молочный коктейль с голубикой"
+        alt="Молочный коктейль с голубикой"
+        width="300"
+        height="300"
+      />
+      <h3>Молочный коктейль с голубикой</h3>
+      <p>Описание: Вкусный :-)</p>
+    </figure>
+
+    <figure>
+      <img
+        src="../img/top-view-vegan-baked-products-arrangement.jpg"
+        title="Круосанчики"
+        alt="Круосанчики"
+        width="300"
+        height="300"
+      />
+      <h3>Круассанчики</h3>
+      <p>Описание: Круассанчики со сгущеночкой</p>
+    </figure>
   </body>
 </html>
