--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
-    <a href="../index.html">Главная</a>
-    <a href="../catalog/catalog.html">Каталог</a>
-    <a href="../index.html">Контакты</a>
-    <h1>Каталог</h1>
-    <p>
+    <a class="menu" href="../index.html">Главная</a>
+    <a class="menu" href="../catalog/catalog.html">Каталог</a>
+    <a class="menu" href="../index.html">Контакты</a>
+    <h1 class="h1">Каталог</h1>
+    <p class="p">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt placeat
       eligendi, officiis doloremque voluptatum quam quia vitae laudantium ipsa
       ea neque veniam fugiat rem nam. Vel tempore dolore ipsam corrupti, at
@@ -37,7 +38,7 @@
         height="300"
       />
       <h3>Манговый коктейль</h3>
-      <p>Описание: Свежевыжатый сок манго</p>
+      <p class="p">Описание: Свежевыжатый сок манго</p>
     </figure>
 
     <figure>
@@ -49,7 +50,7 @@
         height="300"
       />
       <h3>Молочный коктейль с голубикой</h3>
-      <p>Описание: Вкусный :-)</p>
+      <p class="p">Описание: Вкусный :-)</p>
     </figure>
 
     <figure>
@@ -61,7 +62,7 @@
         height="300"
       />
       <h3>Круассанчики</h3>
-      <p>Описание: Круассанчики со сгущеночкой</p>
+      <p class="p">Описание: Круассанчики со сгущеночкой</p>
     </figure>
   </body>
 </html>
