--- a/index.html
+++ b/index.html
@@ -4,32 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="index.html">Главная</a>
-    <a href="./catalog/catalog.html">Каталог</a>
-    <a href="index.html">Контакты</a>
-    <h1>Главная страница</h1>
-    <p>
+    <a class="menu" href="index.html">Главная</a>
+    <a class="menu" href="./catalog/catalog.html">Каталог</a>
+    <a class="menu" href="index.html">Контакты</a>
+    <h1 class="h1">Главная страница</h1>
+    <p class="p">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sed
       impedit eveniet qui error voluptatum debitis et animi, similique adipisci
       voluptatibus, praesentium ipsum tempora odit sapiente cum. Ratione,
       quaerat temporibus.
     </p>
-    <h2>Добро пожаловать на сайт!</h2>
-    <p>
+    <h2 class="h2">Добро пожаловать на сайт!</h2>
+    <p class="p">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sed
       impedit eveniet qui error voluptatum debitis et animi, similique adipisci
       voluptatibus, praesentium ipsum tempora odit sapiente cum. Ratione,
       quaerat temporibus.
     </p>
-    <p>
+    <p class="p">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sed
       impedit eveniet qui error voluptatum debitis et animi, similique adipisci
       voluptatibus, praesentium ipsum tempora odit sapiente cum. Ratione,
       quaerat temporibus.
     </p>
-    <p>
+    <p class="p">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sed
       impedit eveniet qui error voluptatum debitis et animi, similique adipisci
       voluptatibus, praesentium ipsum tempora odit sapiente cum. Ratione,
